# polcanet

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: POLCANet.ipynb  example_aencoders.py
examples/notebooks/: Fashion_dataset.ipynb  LinearityTest.ipynb  Untitled.ipynb  cifar10_dataset.ipynb  cifar10_dataset.py  digits_dataset.ipynb  digits_dataset.py  iris_dataset.ipynb  iris_dataset.py  mnist_dataset.ipynb  mnist_dataset.py  mnist_dataset_pythae_version.ipynb  multi_mnist.py  report_all_classification_metrics.ipynb  report_all_image_metrics.ipynb  run_datasets_notebook.ipynb  run_datasets_notebook.py  run_sevearl_xmnist.ipynb  synthetic_sinusoidal_images.ipynb  synthetic_sinusoidal_images.py  train.py  train_datasets.py  utils.py
examples/notebooks/MNIST_dataset/: classification_metrics.tex  experiment_info.json  image_metrics.tex  model.txt
examples/notebooks/SYNTH_dataset/: experiment_info.json  image_metrics.tex  model_bent.txt  model_bent_summary.txt  model_sin.txt  model_sin_summary.txt
examples/notebooks/cifar10_dataset/: classification_metrics.tex  experiment_info.json  image_metrics.tex  model.txt  wilcoxon_signed_test.tex
examples/notebooks/digits_dataset_32_components/: classification_metrics.tex  experiment_info.json  model.txt  (+2 more)
examples/scripts/: distributed_training_mnist.py
polcanet/: __init__.py  aencoders.py  base.py  example_aencoders.py  mlutils.py  polcanet.py  polcanet_config.py  polcanet_model.py  polcanet_reports.py  polcanet_standalone.py  polcanet_utils.py  reports.py  utils.py
reproductions/iris/: iris_dataset.py
(+18 files in other folders)
